# opennote

./: .gitignore  GEMINI.md  LICENSE  README.md  components.json  index.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  models.rs
src-tauri/src/application/: attachment_service.rs  content_service.rs  file_service.rs  graph_service.rs  group_service.rs  import_export_service.rs  link_service.rs  mod.rs  node_service.rs  project_service.rs  relation_service.rs  settings_service.rs  state.rs  utils.rs  vfs.rs  workspace_service.rs
src-tauri/src/commands/: content.rs  group.rs  import_export.rs  link.rs  mod.rs  node.rs  note.rs  project.rs  property.rs  relation.rs  settings.rs  workspace.rs
src-tauri/src/commands/content/: entity_commands.rs  mod.rs  relation_commands.rs
src-tauri/src/db/: connection.rs  content.rs  group.rs  import_export.rs  link.rs  mod.rs  node.rs  note.rs  project.rs  property.rs  support.rs
src-tauri/src/db/content/: content_rel_repository.rs  content_repository.rs  mapper.rs  mod.rs
src-tauri/src/db/group/: group_member_repository.rs  group_repository.rs  mapper.rs  mod.rs
src-tauri/src/db/import_export/: export_meta_repository.rs  mod.rs  (+3 more)
src-tauri/src/format/: json_format.rs  mime_utils.rs  mod.rs  path_resolver.rs  project_data.rs
src-tauri/src/models/: content.rs  file.rs  graph.rs  group.rs  link.rs  mod.rs  node.rs  project.rs  relation.rs  settings.rs  workspace.rs
(+77 files in other folders)
